--- a/1.md
+++ b/1.md
@@ -1,25 +1,25 @@
 ## День первый: 
-- На одном из ноутов поднять raid 1
+### На одном из ноутов поднять raid 1
 Как вы будете это делать?  fdisk + mdadm
 - fdisk -> https://www.geeksforgeeks.org/fdisk-command-in-linux-with-examples/
 - mdadm -> https://www.golinuxcloud.com/mdadm-command-in-linux/
 
-- Поднять DHCP + DNS сервер на одном из ноутбуков (включить ipv6 по приколу)
+### Поднять DHCP + DNS сервер на одном из ноутбуков (включить ipv6 по приколу)
     - isc-dhcp-server (еще 6 версия есть)
     - unboud (как самый ркайниый вариант - /etc/hosts)
     - поднять nginx самый простой чтобы по доменному имени смогли все отрезолвить 
 
-- Связать 2 ноута через mikrot:
+### Связать 2 ноута через mikrot:
     - настроить микротик 
         - чтобы использовал nat для интернета
         - указать dhcp и dns адреса сервера с dhcp
     - подключить второй ноутбук к микротику и проверить выдачу v4 и v6 адресов
     
-- Поднять Файловую хранилку (любую на ваш вкус и цвет)
+### Поднять Файловую хранилку (любую на ваш вкус, но обосновать выбор)
     - nfs/Nextcloud/ftp/sftp (прикольно будет поднять tftf)
     - поднять nginx c файликами (* задание на звездочку - собрать nginx c поддержкой http 3.0 и сделать пару курлов с 3.0) 
 
-Домашка:
+### Домашка:
 - Поднять нормальный веб сервис (любой nginx который показывает котиков)
     - У меня есть исходник backend +  front, но с багами (очепятками и тп)
     - нужно заставить работать и запустить (каким образом? как получится так и поднять)
