--- a/2.md
+++ b/2.md
@@ -1,18 +1,17 @@
 ## День второй: 
-Лекция по траблшутингу: (возможно уйдет на следующий день)
+### Лекция по траблшутингу: (возможно уйдет на следующий день)
 - какие инструменты нужны для администрирования и как их применять (atop, dpkg, strace, tcpdump)
 
-Учимся быть полезными админами, надо поднять свой:
+### Учимся быть полезными админами, надо поднять свой:
 - docker registry
 - репозиторий с пакетами 
 - собрать свой пакет и закинуть в собственный репозиторий (мануала конечно же не будет)
-Смотри сюда: 
-
+Смотри сюда: -Ю 
 - поднять одно из решений для ВКС (это будет долго)
 
 
 
-Домашка:
+### Домашка:
 - Решить 3 задачи -> бинари я скину (Суть домашки - раздебажить 3 бинарника (strace/tcpdump и понимание как с этим работать))
 - пройти https://github.com/veltman/clmystery (https://sadservers.com/scenario/command-line-murders)
 
