Accidentally add cats and all binaries to repo(

--- a/1.md
+++ b/1.md
@@ -1,12 +1,25 @@
 ## День первый: 
-### На одном из ноутов поднять raid 1
-Как вы будете это делать?  fdisk + mdadm
-- fdisk -> https://www.geeksforgeeks.org/fdisk-command-in-linux-with-examples/
-- mdadm -> https://www.golinuxcloud.com/mdadm-command-in-linux/
 
-### Поднять DHCP + DNS сервер на одном из ноутбуков (включить ipv6 по приколу)
+## Конечно же лекция на бла бла 
+30 минут бла бла
+час на лекцию про сборку пакетов и собрать свой пакетик
+
+### Задания
+1. На одном из ноутов сделать raid 1 на логических дисках
+    Как вы будете это делать?  fdisk + mdadm
+    - fdisk -> https://www.geeksforgeeks.org/fdisk-command-in-linux-with-examples/
+    - mdadm -> https://www.golinuxcloud.com/mdadm-command-in-linux/
+
+    DoD: mdadm показывает рабочий массив 
+
+2. Собрать 
+2. Поднять DHCP + DNS на одном из ноутов    
+    В целом понятно для чего нужен dhcp и dns
+    поэтому задача такая: 
+    - запустить сервисы (isc-dhcp-server + unbound) с произвольной сеткой
     - isc-dhcp-server (еще 6 версия есть)
     - unboud (как самый ркайниый вариант - /etc/hosts)
+
     - поднять nginx самый простой чтобы по доменному имени смогли все отрезолвить 
 
 ### Связать 2 ноута через mikrot:
