--- a/2.md
+++ b/2.md
@@ -6,12 +6,13 @@
 - docker registry
 - репозиторий с пакетами 
 - собрать свой пакет и закинуть в собственный репозиторий (мануала конечно же не будет)
-Смотри сюда: -Ю 
+Смотри сюда: 
 - поднять одно из решений для ВКС (это будет долго)
 
 
 
 ### Домашка:
 - Решить 3 задачи -> бинари я скину (Суть домашки - раздебажить 3 бинарника (strace/tcpdump и понимание как с этим работать))
+
 - пройти https://github.com/veltman/clmystery (https://sadservers.com/scenario/command-line-murders)
 
