--- a/2.md
+++ b/2.md
@@ -2,17 +2,23 @@
 ### Лекция по траблшутингу: (возможно уйдет на следующий день)
 - какие инструменты нужны для администрирования и как их применять (atop, dpkg, strace, tcpdump)
 
-### Учимся быть полезными админами, надо поднять свой:
-- docker registry
-- репозиторий с пакетами 
-- собрать свой пакет и закинуть в собственный репозиторий (мануала конечно же не будет)
-Смотри сюда: 
-- поднять одно из решений для ВКС (это будет долго)
+### Учимся быть полезными админами
+1. Собираем свой дебиановский пакетик
+    В репе есть mini-cat.py
+    Вам нужно собрать дебиановский пакет, с зависимостями на питон, фласк и nginx
+    Также в пакете должен лежать конфигурационный файл для nginx и unit файл для вашего сервиса
+
+    Пример и полезая дока: 
+    - https://blog.packagecloud.io/buildling-debian-packages-with-debuild/
+    - https://blog.packagecloud.io/how-to-build-debian-packages-for-simple-shell-scripts/
+
+    DoD: После установки локального пакета есть systemd файл для сервиса и его можно запустить
+2. Хостим свой репозиторий
+2. Закидываем свой пакет в репозиторий и подключем репозиторий на другой ноутбук
 
 
-
-### Домашка:
-- Решить 3 задачи -> бинари я скину (Суть домашки - раздебажить 3 бинарника (strace/tcpdump и понимание как с этим работать))
+### Домашка (а может и на паре успеем):
+- Решить 3 задачи -> бинари я скину (нет ищите в репозитории) (Суть домашки - раздебажить 3 бинарника (strace/tcpdump и понимание как с этим работать))
 
 - пройти https://github.com/veltman/clmystery (https://sadservers.com/scenario/command-line-murders)
 
