--- a/1.md
+++ b/1.md
@@ -12,28 +12,41 @@
 
     DoD: mdadm показывает рабочий массив 
 
-2. Собрать 
+
 2. Поднять DHCP + DNS на одном из ноутов    
     В целом понятно для чего нужен dhcp и dns
     поэтому задача такая: 
     - запустить сервисы (isc-dhcp-server + unbound) с произвольной сеткой
     - isc-dhcp-server (еще 6 версия есть)
     - unboud (как самый ркайниый вариант - /etc/hosts)
-
     - поднять nginx самый простой чтобы по доменному имени смогли все отрезолвить 
 
-### Связать 2 ноута через mikrot:
+3. Настроить сеть между ноутами (скорее всего уйдет на сл день)
     - настроить микротик 
-        - чтобы использовал nat для интернета
         - указать dhcp и dns адреса сервера с dhcp
+        - использовать nat для интернета 
     - подключить второй ноутбук к микротику и проверить выдачу v4 и v6 адресов
+    - проверить резолв доменных имен
+    - открыть веб морду из пунка 2 на втором ноуте
     
-### Поднять Файловую хранилку (любую на ваш вкус, но обосновать выбор)
+### Если успеем
     - nfs/Nextcloud/ftp/sftp (прикольно будет поднять tftf)
     - поднять nginx c файликами (* задание на звездочку - собрать nginx c поддержкой http 3.0 и сделать пару курлов с 3.0) 
 
-### Домашка:
-- Поднять нормальный веб сервис (любой nginx который показывает котиков)
-    - У меня есть исходник backend +  front, но с багами (очепятками и тп)
+### Прикольная Домашка:
+Тут будете учиться работать с сокетами, докером, сетью ммежду контейнерами 
+Задача: Поднять нормальный веб сервис (любой nginx который показывает котиков)
+
+Исходники: 
+    есть два файлика - backend.py и front.ts
+    И вам нужно сделать веб сервис который будет показывать котиков
+    Все просто :)
+
+Условия: 
     - нужно заставить работать и запустить (каким образом? как получится так и поднять)
-    - Обязательное условие - backend + front должны слушать unix сокеты
+    - backend + front должны слушать unix сокеты
+    - все поднимается через docker-compose
+    - для каждого сервиса должен быть свой контейнер (для того)
+
+Подсказка: чтобы работали сокеты, придется сделать что-то внутри контейнера, что также будет слушать сокет и отправлять все наружу
+В идеале должна получиться такая картинка: 
