Update network tasks

--- a/1.md
+++ b/1.md
@@ -5,30 +5,73 @@
 час на лекцию про сборку пакетов и собрать свой пакетик
 
 ### Задания
-1. На одном из ноутов сделать raid 1 на логических дисках
+<!-- 1. На одном из ноутов сделать raid 1 на логических дисках
     Как вы будете это делать?  fdisk + mdadm
     - fdisk -> https://www.geeksforgeeks.org/fdisk-command-in-linux-with-examples/
     - mdadm -> https://www.golinuxcloud.com/mdadm-command-in-linux/
 
-    DoD: mdadm показывает рабочий массив 
+    DoD: mdadm показывает рабочий массив  -->
+
+0. Как начать работу с микротами
+https://github.com/bob4inski/demo/tree/main/network#%D0%BF%D0%BE%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%B8%D0%B5
+
+Как сбросить микротик в 0 без default:
+https://url.net.au/support/mikrotik-factory-reset-guide
+Отключить от питания и зажать кнопку
+После бута снести конфигурацию (поверьте так будет намного проще):
+```bash
+system reset-configaration no-defaults=yes
+```
+
+```bash
+/system identity set name=bloba
+# Втыкаем 1 порт Mikrotik в интернет (кабель в пол) и прописываем команду:
+/ip dhcp-client add disabled=no interface=ether1 
+
+# Включаем НАТ для работы интернета:
+/ip firewall nat add action=masquerade chain=srcnat out-interface=ether1 src-address=10.10.0.0/16
+
+# Настройка DHCP (командой bridge port add мы обьединяем в 1 логический интерфейс 2 физических, 
+
+/interface bridge add name=dhcp
+/interface bridge port add bridge=dhcp interface=ether2
+/interface bridge port add bridge=dhcp_hq interface=ether10
+/ip address add address=10.10.10.1/24 interface=dhcp network=10.10.10.0
+```
+
+3. Настроить микротик c NAT 
+    - сбросить микротик в 0 без default
+    - настроить nat для доступа в интернет
+    - обьединить все порты, кроме 1 в bridge
+    - подключить ноут и проверить что адрес не выдается
+    - прописать статический адрес на интерфейсе и проверить доступ в сеть
+        
+
+    DoD: можно пропинговать 8.8.8.8 и ya.ru
+
+2. Поднять DHCP на ноуте  
+    В целом понятно для чего нужен dhcp 
+    Надо поднять на статике DHCP сервер и далее указать в микротике dhcp-relay на адрес этого сервера
+
+    - запустить сервис isc-dhcp-server с произвольной сеткой (10.10.10.0/24)
+    https://antons-organization-1.gitbook.io/administrirovanie-linux/servisy-linux/protokol-dhcp/nastroika-dhcp-servera-isc-dhcp-server
+    - Включить dhcp-relay на микротике 
+    https://настройка-микротик.рф/dhcp-relay/
+    ```bash
+    ip dhcp-relay add interface=<> dhcp-server=<> local-address=<> name=relay
+    ```
+    - У кого получится быстро - предлагаю еще поднять dhcp-v6
+
+    DoD: Подключаете второй ноут к микротику и получаете адрес, маршруты и все правильно пингуется
+
+2. Поднять DNS на ноуте  
+    В целом понятно для чего нужен dhcp 
+    Надо поднять на том же ноуте DNS и прописать какие-то доменные имена
+    - запустить сервис unbound с произвольнsv доменным именнем
+    - поменять конфигурацию dhcp чтобы отдавал правильный DNS
+    DoD: Второй ноут может правильно отрезолвить доменные имена
 
 
-2. Поднять DHCP + DNS на одном из ноутов    
-    В целом понятно для чего нужен dhcp и dns
-    поэтому задача такая: 
-    - запустить сервисы (isc-dhcp-server + unbound) с произвольной сеткой
-    - isc-dhcp-server (еще 6 версия есть)
-    - unboud (как самый ркайниый вариант - /etc/hosts)
-    - поднять nginx самый простой чтобы по доменному имени смогли все отрезолвить 
-
-3. Настроить сеть между ноутами (скорее всего уйдет на сл день)
-    - настроить микротик 
-        - указать dhcp и dns адреса сервера с dhcp
-        - использовать nat для интернета 
-    - подключить второй ноутбук к микротику и проверить выдачу v4 и v6 адресов
-    - проверить резолв доменных имен
-    - открыть веб морду из пунка 2 на втором ноуте
-    
 ### Если успеем
     - nfs/Nextcloud/ftp/sftp (прикольно будет поднять tftf)
     - поднять nginx c файликами (* задание на звездочку - собрать nginx c поддержкой http 3.0 и сделать пару курлов с 3.0) 
