Upload mini tasks

--- a/2.md
+++ b/2.md
@@ -14,11 +14,18 @@
 
     DoD: После установки локального пакета есть systemd файл для сервиса и его можно запустить
 2. Хостим свой репозиторий
-2. Закидываем свой пакет в репозиторий и подключем репозиторий на другой ноутбук
+2. Закидываем свой пакет в репозиторий и подключем репозиторий на другой ноутбук (по идее должно получиться)
+3. Скачиваем пакетики с другого хоста
 
+### Мини задачки:
+- прорешать https://sadservers.com/scenario/command-line-murders (или https://github.com/veltman/clmystery)
+- найти в репозитории папку с бинарниками
+- решить 3 бинарника: (а именно заставить их работать)
+    1. 1 (Должен запуститься без ошибок)
+    2. 2 (Нужно заставить вывести любой ваш текст)
+    3. 3 (скопируйте 3 и 3.sh в одну директорию и запустите 3.sh) (найдите файлы в которые пишет программа)
+    4. boba (Этот скрипт устанавливает и ломает nginx) (вам надо запустить nginx любыми правдами и неправдами)
 
-### Домашка (а может и на паре успеем):
-- Решить 3 задачи -> бинари я скину (нет ищите в репозитории) (Суть домашки - раздебажить 3 бинарника (strace/tcpdump и понимание как с этим работать))
+### Raid
 
-- пройти https://github.com/veltman/clmystery (https://sadservers.com/scenario/command-line-murders)
-
+На втором выданном ноуте сконфигурировать и запустить raid 1 на разделах, которые ни к чему не примонтированы (должно быть 2 таких раздела)
