Example of package

--- a/2.md
+++ b/2.md
@@ -12,10 +12,24 @@
     - https://blog.packagecloud.io/buildling-debian-packages-with-debuild/
     - https://blog.packagecloud.io/how-to-build-debian-packages-for-simple-shell-scripts/
 
+    Для systemd:
+    - https://github.com/torfsen/python-systemd-tutorial 
+    - https://discuss.python.org/t/python-script-as-a-systemd-service/16518
+    - https://digitology.tech/posts/zapusk-python-skripta-v-vide-sluzhby-cherez-systemctlsystemd/
+    
     DoD: После установки локального пакета есть systemd файл для сервиса и его можно запустить
+
 2. Хостим свой репозиторий
 2. Закидываем свой пакет в репозиторий и подключем репозиторий на другой ноутбук (по идее должно получиться)
 3. Скачиваем пакетики с другого хоста
+
+
+### Хостим свой docker-registry
+Вполне понятная задача: нужно поднять свой docker registry
+1. Стянуть с публичного registry пару любых образов
+2. Загрузить на свой registry 
+3. Стянуть образ на другую машину 
+
 
 ### Мини задачки:
 - прорешать https://sadservers.com/scenario/command-line-murders (или https://github.com/veltman/clmystery)
