--- a/2.md
+++ b/2.md
@@ -39,6 +39,7 @@
     2. 2 (Нужно заставить вывести любой ваш текст)
     3. 3 (скопируйте 3 и 3.sh в одну директорию и запустите 3.sh) (найдите файлы в которые пишет программа)
     4. boba (Этот скрипт устанавливает и ломает nginx) (вам надо запустить nginx любыми правдами и неправдами)
+    5. Решить 3 задачи на sad servers
 
 ### Raid
 
