--- a/2.md
+++ b/2.md
@@ -2,6 +2,45 @@
 ### Лекция по траблшутингу: (возможно уйдет на следующий день)
 - какие инструменты нужны для администрирования и как их применять (atop, dpkg, strace, tcpdump)
 
+### Линукс и консолька
+Список команд:
+- ps процессы
+- grep/awk обработка текста
+- find - поиск файлов
+- tail/less/head вывод файлов 
+- df/du размер дисков
+- dd - генерация рандомного файла
+- lscpu/lsblk - команда лс в сочетании в остальным супер полезная 
+- /proc - вся инфа про процессы
+- strace/gdb/tcpdump - снятие инфы по процессам
+- lsof - что угодно про взаимодействие с файлами
+- telnet/nc для проверки соединения с портом
+- mtr/traceroute
+
+Что делаем: запускаем nginx и анализириуем его работу:
+- какие файлы открыты
+- куда пишет логи
+- какие порты слушает
+- найти все файлы больше 100Mb
+- базовая информация про систему:
+    - количество ядер
+    - количество процессоров их тип
+    - обьем RAM
+    - количество дисков и какой диск самый большой
+    - версию системы
+
+DoD: ответ набросать текстом или показать мне как выполнить каждый пункт
+
+### Мини задачки:
+- прорешать https://sadservers.com/scenario/command-line-murders (или https://github.com/veltman/clmystery)
+- найти в репозитории папку с бинарниками
+- решить 3 бинарника: (а именно заставить их работать)
+    1. 1 (Должен запуститься без ошибок)
+    2. 2 (Нужно заставить вывести любой ваш текст)
+    3. 3 (скопируйте 3 и 3.sh в одну директорию и запустите 3.sh) (найдите файлы в которые пишет программа)
+    4. boba (Этот скрипт устанавливает и ломает nginx) (вам надо запустить nginx любыми правдами и неправдами)
+    5. Решить 3 задачи на sad servers
+
 ### Учимся быть полезными админами
 1. Собираем свой дебиановский пакетик
     В репе есть mini-cat.py
@@ -31,15 +70,7 @@
 3. Стянуть образ на другую машину 
 
 
-### Мини задачки:
-- прорешать https://sadservers.com/scenario/command-line-murders (или https://github.com/veltman/clmystery)
-- найти в репозитории папку с бинарниками
-- решить 3 бинарника: (а именно заставить их работать)
-    1. 1 (Должен запуститься без ошибок)
-    2. 2 (Нужно заставить вывести любой ваш текст)
-    3. 3 (скопируйте 3 и 3.sh в одну директорию и запустите 3.sh) (найдите файлы в которые пишет программа)
-    4. boba (Этот скрипт устанавливает и ломает nginx) (вам надо запустить nginx любыми правдами и неправдами)
-    5. Решить 3 задачи на sad servers
+
 
 ### Raid
 
