Update 3rd lesson

--- a/3.md
+++ b/3.md
@@ -1,18 +1,30 @@
 
-### Прикольная таска:
+1. решить 3 бинарника: (а именно заставить их работать)
+    0. найти файлы в репозитории
+    1. (Должен запуститься без ошибок)
+    2. (Нужно заставить вывести любой ваш текст)
+    3. (скопируйте 3 и 3.sh в одну директорию и запустите 3.sh) (найдите файлы в которые пишет программа)
+    4. boba (Этот скрипт устанавливает и ломает nginx) (вам надо запустить nginx любыми правдами и неправдами)
+
+2. Прикольная таска:
 Тут будете учиться работать с сокетами, докером, сетью ммежду контейнерами 
 Задача: Поднять нормальный веб сервис (любой nginx который показывает котиков)
 
 Исходники: 
-    есть два файлика - backend.py и front.ts
-    И вам нужно сделать веб сервис который будет показывать котиков
-    Все просто :)
+    Исходников нет, вам нужно написать простую питонячку, которая получает ответ от `https://api.thecatapi.com/v1/images/search`
+    И возвращает его пользователю 
 
 Условия: 
     - нужно заставить работать и запустить (каким образом? как получится так и поднять)
     - backend + front должны слушать unix сокеты
     - все поднимается через docker-compose
     - для каждого сервиса должен быть свой контейнер (для того)
+
+Шаги для выполнения: 
+    - написать питонячку чтобы работала локально
+    - написать докер чтобы запустилась
+    - заставить питонячку слушать unix сокет (gunicorn/uwsgi)
+    - добавить в контейнер еще и nginx чтобы проксировать запросы в сокет
 
 Подсказка: чтобы работали сокеты, придется сделать что-то внутри контейнера, что также будет слушать сокет и отправлять все наружу
 В идеале должна получиться такая картинка: 
